Release 0.4-1
  * Add submatrix() method for matrices.

Release 0.4-0
  * Ingegrate .BLDIM and .ICTXT within pbd_opt().
  * Added getLocal().
  * Fix to as.vector() (thanks Michael Lawrence)

Release 0.3-3
  * Switched to comm.match.arg().
  * Switched to header-only RNACI.

Release 0.3-2
  * Fixed any() bug.
  * Added Examples to all functions.
  * Improved readme significantly.

Release 0.3-1
  * Numerous improvements to documentation.
  * Switched to roxygen2.

Release 0.3-0
  * Added check to eigen2() for non-square bldims.
  * Fixed sparsity() bugs.
  * Added scalar to expm() method.
  * Updated vignette format.
  * Fixed author affiliation in vignette.
  * Added sparse dsmatrix and weaker dmat classes.
  * Added basic sparse BLAS support.
  * Linked with RNACI.
  * Rewrote internals to use RNACI.
  * Some minor constructor bugfixes.
  * Fixed minor CRAN check issues.
  * Vignetted copyright updated.

Release 0.2-3
  * Added matrix exponentiation.
  * as.vector() and as.matrix() bugfix for unusual proc.dest values.
  * Added method for constructing distributed Hilbert matrices.
  * Improved manual.
  * Added experimental eigen2() method.
  * Fixed eigen() bug.
  * Fixed isSymmetric bug.

Release 0.2-2
  * Several qr()/qr.Q() bugs fixed.
  * Added rowMin(), colMin(), rowMax(), and colMax() methods.
  * Added as.block(), as.rowblock(), as.colblock(), as.rowcyclic(), 
    as.colcyclic(), and as.blockcyclic() redistribution methods.
  * Added experimental ddvector class.

Release 0.2-1
  * Added eigen() method.
  * Attributes bugfix when subsetting.

Release 0.2-0
  * Added method for 'cor' (pearson only).
  * Significantly expanded method "ddmatrix".
  * Completely redid all the internals to accommodate corresponding pbdBASE changes.
  * Added norm(), rcond(), and kappa() methods.
  * Added new diag() method for constructing diagonal ddmatrices.
  * Added copyright to vignette.

Release 0.1-1
  * Added simple var() and sd() wrappers for ddmatrix.