@@ -1,5 +1,6 @@
 Release 0.4-1
   * Add submatrix() method for matrices.
+  * Switch as.ddmatrix() to use new distribution method.
 
 Release 0.4-0
   * Ingegrate .BLDIM and .ICTXT within pbd_opt().
